Implemented JWT authentication and role-based authorization